# ComfyUI-MVSAM3D-Unofficial

./: .comfyignore  .gitignore  .gitmodules  LICENSE  README.md  __init__.py  discovery.py  install.py  nodes.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
example_workflows/: mvsam3d_custom_views_upscaled.json  mvsam3d_paper_example.json
scripts/: gen_custom_views_workflow.py  setup_env.py
tests/: test_glue_cpu.py
worker/: mvsam3d_offload.py  mvsam3d_worker.py
